[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "test"
version = "0.0.16"
requires-python = ">=3.9"
license = "MIT"
readme = "README.md"
repository = ""
packages = [{ include = "autobot" }]
dependencies = [
    "colorama>=0.4.5",
    "openai>=0.23.0,<0.24.0",
    "python-dotenv>=0.21.0",
    "rich>=12.5.1",
]

[project.scripts]
autobot = "autobot.main:main"

[tool.uv]
dev-dependencies = [
    "black>=22.8.0",
    "isort>=5.10.1",
    "mypy>=0.981",
    "twine>=4.0.1",
    "ruff>=0.0.48",
]

[tool.ruff]
preview = true
extend-exclude = ["autobot/schematics"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.hatch.build.targets.wheel]
packages = ["autobot"]
